# eight_cdpr

./: README.md  package.xml  setup.cfg  setup.py
eight_cdpr/: main.py
launch/: eight_cdpr_launch.py
urdf/: eight_cdpr_model.urdf
urdf/model/: endeffector.dae
